k8-deploy.yaml
# Creates Replicaset 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  labels:
    app: user
spec:
  replicas: 3
  strategy: 
    # type: Recreate
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 20
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
      - name: user
        image: 355449129696.dkr.ecr.us-east-1.amazonaws.com/user:005
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: user-svc
spec:
  selector:
     app: user
  ports:
    - protocol: TCP
      port: 8080                         # Port number that your service has to listen and this is the port you will access
      targetPort: 8080                   # TargetPort forwards the requests to the backend pod


---
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-ingress
spec:
  rules:
  - host: robot-frontend.b54-roboshop.online
    http:
      paths:
      - path: "/api/user/"
        pathType: Prefix
        backend:
          service:
            name: user-svc
            port:
              number: 8080
  ingressClassName: nginx
